# language_tool

./: .gitignore  MANIFEST.in  README.rst  download_lt.py  pyproject.toml  setup.cfg  setup.py  test.py
language_tool/: __init__.py
